# e-commerce-api

./: .env  .gitignore  agent.py  main.py  populate.py  pyproject.toml  requirements.txt  start.py  test.py
app/: main.py
app/api/v1/auth/: __init__.py  routes.py
app/api/v1/categories/: __init__.py  routes.py
app/api/v1/livekit/: routes.py
app/api/v1/merchants/: __init__.py  routes.py
app/api/v1/orders/: __init__.py  razorpay.py  routes.py
app/api/v1/products/: __init__.py  reviews.py  routes.py
app/api/v1/users/: __init__.py  routes.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/libs/: category_utils.py  chromadb.py  cloudinary.py  livekit.py
app/schemas/: category.py  merchant.py  order.py  product.py  review.py  user.py
embeddings/: chroma.sqlite3
