[project]
name = "e-commerce-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "chromadb>=0.6.3",
    "cloudinary>=1.43.0",
    "email-validator==2.1.0.post1",
    "faker>=37.0.2",
    "fastapi==0.105.0",
    "motor==3.3.1",
    "open-clip-torch>=2.31.0",
    "orjson>=3.10.15",
    "passlib==1.7.4",
    "pydantic==2.4.2",
    "pydantic-settings==2.1.0",
    "pymongo==4.6.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn==0.24.0",
]
